tests/baselines/reference/exportClassNameWithObjectSystem(target=es2015).errors.txt
error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
exportClassNameWithObjectSystem.ts(1,14): error TS2725: Class name cannot be 'Object' when targeting ES5 and above with module System.


!!! error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== exportClassNameWithObjectSystem.ts (1 errors) ====
    export class Object {}
                 ~~~~~~
!!! error TS2725: Class name cannot be 'Object' when targeting ES5 and above with module System.
    